src/objects/Study_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Instructions__c</fullName>
        <formula>Checklist_Item__r.Instructions_TF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_Item__c</fullName>
        <label>Checklist Item ID</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Study Checklists</relationshipLabel>
        <relationshipName>Study_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Comment_Date__c</fullName>
        <label>Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <formula>Checklist_Item__r.Milestone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newly_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newly Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <formula>TEXT(Checklist_Item__r.Process__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active roles can be selected</errorMessage>
            <filterItems>
                <field>LOV__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Role</value>
            </filterItems>
            <filterItems>
                <field>LOV__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LOV__c</referenceTo>
        <relationshipLabel>Study Checklists</relationshipLabel>
        <relationshipName>Study_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Checklist_Version_Id__c</fullName>
        <label>Study Checklist Version Id</label>
        <referenceTo>Study_Checklist_Version__c</referenceTo>
        <relationshipLabel>Study Checklist Items</relationshipLabel>
        <relationshipName>Study_Checklists</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Study Checklist</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Study Checklist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>